--- a/.env
+++ b/.env
@@ -4,4 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="mongodb://root:password123@db:27017/nest?authSource=admin"
+
+GOOGLE_MAPS_API_KEY="AIzaSyDLvEJOd_8zkct_O5zjm-80eP-E0fK9B7M"
